# beyond

./: .gitignore  Cargo.toml  SharedTaskfile.yml  Taskfile.yml  docker-compose.yml
client/: Cargo.toml  Taskfile.yml  index.html
client/src/: main.rs
scripts/: install-deps.sh
server/: Cargo.toml  Taskfile.yml
server/src/: lib.rs  main.rs
traefik/: config.yml
